Allow using FP32, Remove the necessity of specifying lambda, block_size, or num_threads